LFLT-555 Migrate LSAS to Java 17 and Spring Boot 3  - Minor code improvements and fixing issues caused by the migration  - Changed stack base BOM version to 3.0-r2305.1  - Bumped application version to 2.7.0-dev